# programming-for-biology

./: license.txt  pyproject.toml  readme.md
programming_for_biology/arrays/: image_boundaries.py  nautilus.ipynb  smoothing.ipynb
programming_for_biology/basics_and_branches/: gene_mapping.py
programming_for_biology/bioinformatics/: dictionaries_and_speed.py  dot_plots.ipynb  fetch_genbank.py  generating_pairs.py  sequence_alignment.ipynb
programming_for_biology/complex_loops/: counting_codons.py  rolling_dice.py  simulation_game.py  tossing_coins.py
programming_for_biology/complex_loops_b/: mendel.py  tossing_coins.py
programming_for_biology/data_analysis/: cell_polygons.py  colored_shapes.ipynb  visualization_and_statistics.ipynb
programming_for_biology/data_types/: fin_regeneration.ipynb
programming_for_biology/dictionaries_and_strings/: aminos.py  create_strings.py  match_key_with_values.py  print.py  rewrite_strings.py  riddle.py
programming_for_biology/dynamical_systems/: lateral_inhibition.py  numerical_errors.py  predator_prey_dynamics.ipynb
programming_for_biology/for-loops/: adding_up.py  calculation_with_two_lists.py  population_dynamics.py  product.py
programming_for_biology/functions/: genbank_and_fasta.py
programming_for_biology/image_analysis/: binning.py  correlation_between_area_and_infection_rate.ipynb  fiji.py
programming_for_biology/lists_and_tuples/: average_length.py  creator.py  find_longer_base_list.py  gamov.py  proteomics.py  reader.py  squares.py  string_to_int.py  strip.py
programming_for_biology/revision/: factorial.py  (+3 more)
(+19 files in other folders)
